--- a/src/HttpMock.Verify.NUnit/HttpMock.Verify.NUnit.csproj
+++ b/src/HttpMock.Verify.NUnit/HttpMock.Verify.NUnit.csproj
@@ -56,6 +56,9 @@
       <Name>HttpMock</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="HttpMock.Verify.NUnit.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
