Support matching requests using headers

--- a/src/HttpMock.Integration.Tests/HttpMock.Integration.Tests.csproj
+++ b/src/HttpMock.Integration.Tests/HttpMock.Integration.Tests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="SystemUnderTest.cs" />
     <Compile Include="UsingMultipleServersTests.cs" />
     <Compile Include="UsingTheSameStubServerAndDifferentQueryRequestParams.cs" />
+    <Compile Include="UsingTheSameStubServerAndDifferentRequestHeaders.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config">
