--- a/src/HttpMock.Logging.Log4Net/HttpMock.Logging.Log4Net.csproj
+++ b/src/HttpMock.Logging.Log4Net/HttpMock.Logging.Log4Net.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{873E4657-ED89-4B3A-B2F2-82B183AB358C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HttpMock.Log4NetLogger</RootNamespace>
-    <AssemblyName>HttpMock.Log4NetLogger</AssemblyName>
+    <RootNamespace>HttpMock.Logging.Log4Net</RootNamespace>
+    <AssemblyName>HttpMock.Logging.Log4Net</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -45,9 +45,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\GlobalAssemblyInfo.cs">
-      <Link>Properties\GlobalAssemblyInfo.cs</Link>
-    </Compile>
     <Compile Include="Log4NetFactory.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
