--- a/src/HttpMock.Logging.Log4Net/HttpMock.Logging.Log4Net.csproj
+++ b/src/HttpMock.Logging.Log4Net/HttpMock.Logging.Log4Net.csproj
@@ -55,7 +55,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="HttpMock.Log4NetLogger.nuspec">
+    <Content Include="HttpMock.Logging.Log4Net.nuspec">
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
