--- a/src/HttpMock/HttpMock.csproj
+++ b/src/HttpMock/HttpMock.csproj
@@ -47,6 +47,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
     <Compile Include="ILog.cs" />
     <Compile Include="IRequestProcessor.cs" />
     <Compile Include="IRequestVerify.cs" />
