--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,3 +28,4 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+    pathtoCustomTestAdapters: '$(Build.SourcesDirectory\packages)'
