--- a/src/HttpMock.Unit.Tests/packages.config
+++ b/src/HttpMock.Unit.Tests/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Kayak" version="0.7.2" />
   <package id="NUnit" version="3.11.0" targetFramework="net45" />
+  <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net45" />
   <package id="RhinoMocks" version="3.6.1" requireReinstallation="True" />
 </packages>
