--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,8 @@ variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
+  Version.MajorMinor: 2.3
+  Version.Revision: $[counter(variables['Version.MajorMinor'], 1)]
 
 steps:
 - task: NuGetToolInstaller@0
