--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,6 +37,7 @@ steps:
     includeSymbols: true
     
 - task: PublishPipelineArtifact@0
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
   inputs:
     artifactName: 'nugetpackages' 
     targetPath: '$(Build.ArtifactStagingDirectory)'
